pocindle-client/src/index.scss
:root {
  --basic-black: #000000;
  --basic-white: #ffffff;
  --light-yellow: #e9bc68;
  --blue: #3db4f2;
  --light-gray: rgba(23, 23, 25, 0.3);
  --text-light: #7a858f;
  --text: #5c728a;
  --header-bg: var(--basic-white);
  --main-bg: #edf1f5;
  --footer-bg: #11161d;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  font-family: Roboto, Oxygen, -apple-system, BlinkMacSystemFont, Segoe UI,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif !important;
  font-size: 16px;
  overflow-y: scroll;
  color: var(--text);
}

